<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Initial Strings -->
    <string name="app_name">Storm Master</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Scanner Strings -->
    <string name="temp">Temporary Storage</string>
    <string name="scan">Scan</string>
    <string name="Analyze">Analyze</string>
    <string name="cleardb">Clear Database</string>
    <string name="makeCSV">Make CSV</string>
    <string name="makeDatabase">Make Database from CSV</string>
    <string name="append">Append</string>
    <string name="overwrite">Overwrite</string>
    <string name="options">Options</string>

    <!-- Database Strings -->
    <string name="auto_download">Download Auto XML</string>
    <string name="tele_download">Download Tele XML</string>

    <!-- Download Strings -->
    <string name="update">Update Database</string>
    <string name="clear">Clear Database</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="title_activity_sorter">SorterActivity</string>

    <string-array name="choices">
        <item>Team Number</item>
        <item>Match Number</item>
        <item>Alliance</item>
        <item>Robot in Auto</item>
        <item>Number of totes in Auto</item>
        <item>Number of containers in auto</item>
        <item>Number of stacked totes in Auto</item>
        <item>Number of containers in center</item>
        <item>Tote level 1</item>
        <item>Tote level 2</item>
        <item>Tote level 3</item>
        <item>Tote level 4</item>
        <item>Tote level 5</item>
        <item>Tote level 6</item>
        <item>Container level 1</item>
        <item>Container level 2</item>
        <item>Container level 3</item>
        <item>Container level 4</item>
        <item>Container level 5</item>
        <item>Container level 6</item>
        <item>Noodle</item>
        <item>Coop Level 1</item>
        <item>Coop Level 2</item>
        <item>Coop Level 3</item>
        <item>Coop Level 4</item>
    </string-array>

    <string name="sort">Sort</string>
    <string name="title_activity_team_report">TeamReportActivity</string>

    <string name="website">www.stormroboticsnj.org</string>
    <string name="twitter">twitter.com/stormroboticsnj</string>
    <string name="title_activity_options">Options</string>

</resources>
