<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.stormroboticsnj.frc_scouting_2015_master.OptionsActivity"
    android:background="#ff000000">

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#ffffffff"
        android:nestedScrollingEnabled="false"
        android:text="@string/cleardb"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="clearDatabase"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#ffffffff"
        android:nestedScrollingEnabled="false"
        android:text="@string/makeCSV"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="makeCSV"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#ffffffff"
        android:nestedScrollingEnabled="false"
        android:text="@string/makeDatabase"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="makeDatabaseFromCSV"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/website"
        android:id="@+id/textView23"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/twitter"
        android:id="@+id/textView24"
        android:textColor="#ffffffff"
        android:layout_above="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
